# Python-for-data-science-42

./: README.md
module00/: .gitignore
module00/ex00/: Hello.py
module00/ex01/: format_ft_time.py
module00/ex03/: NULL_not_found.py  tester.py
module00/ex04/: whatis.py
module00/ex05/: building.py
module00/ex06/: filterstring.py  ft_filter.py
module00/ex07/: sos.py
module00/ex08/: Loading.py  tester.py
module00/ex09/: pyproject.toml
module00/ex09/ft_package/: count_in_list.py
module01/ex00/: give_bmi.py  tester.py
module01/ex01/: array2D.py  tester.py
module01/ex02/: load_image.py  tester.py
module01/ex03/: load_image.py  zoom.py
module01/ex04/: load_image.py  rotate.py
module01/ex05/: pimp_image.py  tester.py
module02/ex00/: load_csv.py  tester.py
module02/ex01/: aff_life.py
module02/ex02/: aff_pop.py
module02/ex03/: projection_life.py
module03/ex00/: S1E9.py  tester.py
module03/ex01/: S1E7.py
module03/ex02/: DiamondTrap.py  tester.py
module03/ex03/: ft_calculator.py
module03/ex04/: ft_calculator.py  tester.py
module04/ex00/: statistics.py  tester.py
module04/ex01/: in_out.py  tester.py
module04/ex02/: callLimit.py
module04/ex03/: new_student.py  tester.py
